--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
             <artifactId>commons-dbcp</artifactId>
             <version>1.2.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.sendgrid</groupId>
+            <artifactId>sendgrid-java</artifactId>
+            <version>3.0.9</version>
+        </dependency>
     </dependencies>
 
     <build>
