--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,17 @@
             <artifactId>sendgrid-java</artifactId>
             <version>3.0.9</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery</artifactId>
+            <version>2.2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>3.3.7</version>
+        </dependency>
     </dependencies>
 
     <build>
