--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
             <artifactId>bootstrap</artifactId>
             <version>3.3.7</version>
         </dependency>
+    </dependencies>
     <build>
         <plugins>
             <plugin>
